# holocron

./: .gitignore  Cargo.toml  README.md  holocron.toml.example
crates/holocron-cli/: Cargo.toml
crates/holocron-cli/src/: main.rs
crates/holocron-core/: Cargo.toml
crates/holocron-core/src/: cache.rs  config.rs  engine.rs  error.rs  lib.rs  logging.rs  prompt.rs  sql_guard.rs  traits.rs  types.rs
crates/holocron-core/src/providers/: gemini.rs  mod.rs  pgvector.rs  postgres.rs
crates/holocron-core/tests/: engine.rs  pg.rs
crates/holocron-grpc/: Cargo.toml  build.rs
crates/holocron-grpc/proto/: holocron.proto
crates/holocron-grpc/src/: main.rs
crates/holocron-server/: Cargo.toml
crates/holocron-server/src/: main.rs
demo/: readonly_role.sql  seed.sql
