[package]
name = "holocron-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Text-to-SQL RAG engine (Vanna-style) with Gemini + Postgres/pgvector"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sqlx = { workspace = true }
pgvector = { workspace = true }
sqlparser = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[features]
default = ["gemini", "postgres"]
gemini = []
postgres = []

[dev-dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
pgvector = { workspace = true }
wiremock = "0.6"
